deployments/postgrest-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest-api
  namespace: api-auth
  labels:
    app: postgrest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: postgrest
              topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: postgrest
        image: postgrest/postgrest:latest
        ports:
        - containerPort: 3000
