deployments/postgrest-api/postgrest.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest-api
  namespace: api-auth
  labels:
    app: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
      - name: postgrest
        image: postgrest/postgrest:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: postgrest-service
  namespace: api-auth
spec:
  selector:
    app: postgrest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
