deployments/postgrest-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodapi-ingress
  namespace: api-auth
  annotations:
    cert-manager.io/issuer: letsencrypt-postgrest
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/allow-headers: "true"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'

    
spec:
  ingressClassName: nginx
  rules:
    - host: postgrest-api.muntashirislam.com
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgrest-service
                port:
                  number: 80
  tls:
  - hosts:
    -  postgrest-api.muntashirislam.com
    secretName: letsencrypt-postgrest-tls
